gl33-master/src/test/deca/context/invalid/other/while_fausse_float.deca
// Invalid test
// Boucle while fausse (float comme entree)

{
    float x = 1.2;

    while(x){
        println("non");
    }
}
